manifests/01-meta-db-virtuoso.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: meta-db-virtuoso-1
  namespace: default
  labels:
    app: meta-db-virtuoso
    instance: virtuoso-1
spec:
  serviceName: ${META_SERVICE_NAME}
  replicas: 1
  selector:
    matchLabels:
      app: meta-db-virtuoso
      instance: virtuoso-1
  template:
    metadata:
      labels:
        app: meta-db-virtuoso
        instance: virtuoso-1
    spec:
      containers:
        - name: virtuoso
          image: openlink/virtuoso-opensource-7@sha256:e07868a3db9090400332eaa8ee694b8cf9bf7eebc26db6bbdc3bb92fd30ed010
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1111
              protocol: TCP
              name: isql
            - containerPort: 8890
              protocol: TCP
              name: sparql
          readinessProbe:
            tcpSocket:
              port: 1111
            initialDelaySeconds: 30   
            periodSeconds: 10          
            timeoutSeconds: 5          
            successThreshold: 1        
            failureThreshold: 5       
          livenessProbe:
            tcpSocket:
              port: 1111
            initialDelaySeconds: 240 
            periodSeconds: 60          
            timeoutSeconds: 15          
            failureThreshold: 2
          resources:
            requests:
              cpu: ${META_CPU_REQUEST}
              memory: ${META_MEMORY_REQUEST}
            limits:
              cpu: 6
              memory: 128Gi
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - '-c'
                  - virtuoso-t +wait +shutdown
          volumeMounts:
            - mountPath: /database
              name: virtuoso-storage
              subPath: ${META_DB_SUBPATH}
      volumes:
        - name: virtuoso-storage
          persistentVolumeClaim:
            claimName: ${STORAGE_PVC}
      terminationGracePeriodSeconds: 60
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: meta-db-virtuoso-2
  namespace: default
  labels:
    app: meta-db-virtuoso
    instance: virtuoso-2
spec:
  serviceName: ${META_SERVICE_NAME}
  replicas: 1
  selector:
    matchLabels:
      app: meta-db-virtuoso
      instance: virtuoso-2
  template:
    metadata:
      labels:
        app: meta-db-virtuoso
        instance: virtuoso-2
    spec:
      containers:
        - name: virtuoso
          image: openlink/virtuoso-opensource-7@sha256:e07868a3db9090400332eaa8ee694b8cf9bf7eebc26db6bbdc3bb92fd30ed010
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1111
              protocol: TCP
              name: isql
            - containerPort: 8890
              protocol: TCP
              name: sparql
          readinessProbe:
            tcpSocket:
              port: 1111
            initialDelaySeconds: 30   
            periodSeconds: 10          
            timeoutSeconds: 5          
            successThreshold: 1        
            failureThreshold: 5       
          livenessProbe:
            tcpSocket:
              port: 1111
            initialDelaySeconds: 240 
            periodSeconds: 60          
            timeoutSeconds: 15          
            failureThreshold: 2
          resources:
            requests:
              cpu: ${META_CPU_REQUEST}
              memory: ${META_MEMORY_REQUEST}
            limits:
              cpu: 6
              memory: 128Gi
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - '-c'
                  - virtuoso-t +wait +shutdown
          volumeMounts:
            - mountPath: /database
              name: virtuoso-storage
              subPath: ${META_DB_SUBPATH_2}
      volumes:
        - name: virtuoso-storage
          persistentVolumeClaim:
            claimName: ${STORAGE_PVC}
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: ${META_SERVICE_NAME}
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 1111
      targetPort: 1111
      protocol: TCP
      name: isql
    - port: 8890
      targetPort: 8890
      protocol: TCP
      name: sparql
  selector:
    app: meta-db-virtuoso
