manifests/10-oc-splitted-ldd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-ldd
  namespace: default
  labels:
    app: oc-ldd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oc-ldd
  template:
    metadata:
      labels:
        app: oc-ldd
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: oc-ldd
                topologyKey: kubernetes.io/hostname
      containers:
        - name: oc-ldd
          image: opencitations/oc_ldd:${LDD_WEBSITE_VERSION}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: "4Gi"
            requests:
              memory: 2Gi
              cpu: 300m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
 name: oc-ldd-service
 namespace: default
 labels:
   app: oc-ldd
spec:
 selector:
   app: oc-ldd
 ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 8080
 type: ClusterIP
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: oc-ldd
 namespace: default
 labels:
   app: oc-ldd
spec:
 entryPoints:
   - websecure
 routes:
   - kind: Rule
     match: Host(`${LDD_BASE_URL}`)
     services:
       - name: varnish-service
         port: 80
 tls:
   certResolver: myresolver
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: oc-ldd-http-only
 namespace: default
 labels:
   app: oc-ldd
spec:
 entryPoints:
   - web
 routes:
   - kind: Rule
     match: Host(`${LDD_BASE_URL}`)
     middlewares:
       - name: redirect-to-https
     services:
       - name: varnish-service
         port: 80
